# ClinicalRiskPredictor

./: .gitignore  ClinicalRiskPredictor_Presentation.pptx  README.md  Speaker_Script.docx  baseline.ipynb  pyproject.toml  requirements.txt  xai.txt  xai0.txt
presentation/: README.md  generate_plots.py
presentation/figures/: summary.json
presentation/figures_full/: summary.json
scripts/: explain.py  fidelity.py  time_sensitivity.py  train.py  visualize_xai.py
src/clinical_risk_predictor/: config.py  data.py  model.py  train.py
src/clinical_risk_predictor/xai/: __init__.py  attention_rollout.py  fidelity.py  integrated_gradients.py  plots.py  saliency.py
