[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-risk-predictor"
version = "0.1.0"
description = "ChronoFormer-based clinical risk prediction with XAI (attention rollout/saliency) on EHR-like event sequences."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "ClinicalRiskPredictor team" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

